--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="container">
             <div class="head-container">
                 <div class="navbar-container">
-                    <div class="itm">
-                        <p>Клієнт</p>
-                        <p>DPF Cleaner</p>
-                    </div>
+                    
+                        <div class="nav-itm">
+                            <p>Клієнт</p>
+                            <p>DPF Cleaner</p>
+                        </div>
 
-                    <div class="nav">
                         <div class="nav-itm">
                             <p>Розробник</p>
                             <p>Star Way</p>
@@ -32,17 +32,16 @@
                             <p>Рік</p>
                             <p>2019</p>
                         </div>
-                    </div>
                 </div>
 
 
             <div class="head-content">
                 <img src="img/logo.png" class="logo">
-
                 <h1 class="head-content-text">Розробка веб сайту для компанії<br> DPF Cleaner</h1>
+            </div>
 
-                <img src="img/1.png" class="display">
-
+            <div class="display">
+                <img src="img/disp.png" class="disp">
             </div>
         </div>
 
@@ -108,8 +107,8 @@
             <div class="block_ipad">
                 <img src="img/ipad_black.png" class="ipad">
             </div>
+            
             <div class="block_iphone">
-
                 <div class="iphone_one">
                     <img src="img/iphone_1.png">
                 </div>
